--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "socket.io": "^4.8.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
