--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "motion": "^12.25.0",
     "next": "^16.1.1",
     "quill": "^2.0.3",
     "react": "^19.0.0",
